Bug 210136 - The color of derived function is the same than original function in default
Summary: The color of derived function is the same than original function in default
Status: RESOLVED FIXED
Alias: None
Product: kmplot
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Klaus-Dieter M
URL:
Keywords: investigated, triaged
Depends on:
Blocks:
 
Reported: 2009-10-11 01:18 UTC by Charles-Antoine Couret
Modified: 2018-11-08 13:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Charles-Antoine Couret 2009-10-11 01:18:14 UTC
Version:            (using KDE 4.3.1)
OS:                Linux
Installed from:    Fedora RPMs

When I trace a function or derivative second derivative, by default, it is in the same color as original function. It's embarrassing because it's hard to differentiate them and sometimes we have to manually change these colors. This should be automatic by default to avoid doing that. Or you can choose the options in advance (as the original functions).
Comment 1 Andrew Crouthamel 2018-11-05 03:12:55 UTC
Dear Bug Submitter,

This bug has been stagnant for a long time. Could you help us out and re-test if the bug is valid in the latest version? I am setting the status to NEEDSINFO pending your response, please change the Status back to REPORTED when you respond.

Thank you for helping us make KDE software even better for everyone!
Comment 2 Alexander Potashev 2018-11-05 16:57:43 UTC
Reproducible on Fedora 28 with kmplot-18.04.3
Comment 3 Andrew Crouthamel 2018-11-05 17:01:42 UTC
Thanks for the update!
Comment 4 Yuri Chornoivan 2018-11-08 13:42:21 UTC
Git commit b534e17e7aa352b4c46f2cccbf0ac2c5ae0c3453 by Yuri Chornoivan.
Committed on 08/11/2018 at 13:41.
Pushed by yurchor into branch 'master'.

Choose random default colors for derivatives and integral

M  +6    -3    kmplot/parser.cpp

https://commits.kde.org/kmplot/b534e17e7aa352b4c46f2cccbf0ac2c5ae0c3453