Choose random default colors for derivatives and integral

BUG: 210136